<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview_taskItem"
        android:background="?attr/selectableItemBackground"
        android:layout_width="match_parent"
        android:layout_height="96dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:cardElevation="6dp">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/imageView"
                android:layout_marginTop="6dp"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_user_profile"
                android:contentDescription="@string/user_icon" />
            <TextView
                android:text="@string/user_name"
                android:gravity="center"
                android:id="@+id/tv_userName"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:layout_width="72dp"
                android:maxLines="2"
                android:ellipsize="end"
                android:layout_height="wrap_content"
                />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/title_text"
                android:textSize="18sp"
                android:maxLines="2"
                android:ellipsize="end"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"/>

            <LinearLayout
                android:layout_gravity="end"
                android:orientation="horizontal"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/tv_taskId"
                    android:text="@string/no_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/tv_status"
                    android:text="@string/unknown_status"
                    android:gravity="end"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:paddingEnd="15dp"
                    android:layout_height="wrap_content"
                    tools:ignore="RtlSymmetry" />
            </LinearLayout>
        </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>